Se agregaron las insignias y tecnologías aprendidas

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -96,3 +96,17 @@
         padding: 20px;
       }
   }
+
+  .container{
+    display: flex;
+    justify-content: space-between;
+  }
+  .container .img-hobbies{
+    width: 100px;
+    height: 100px;
+    
+  }
+  .container .img-hobbies:hover{
+    box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75);
+    cursor: pointer;
+  }
