--- a/src/components/Proyect/proyect.css
+++ b/src/components/Proyect/proyect.css
@@ -15,14 +15,27 @@
     position: sticky;
     z-index: 2;
   }
-  
-  .p-circle {
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    margin: 3px;
-    background-color: turquoise;
+  .p-browser-insignias {
+    height: 20px;
+    background-color:black;
+    display: flex;
+    align-items: center;
+    position: sticky;
+    z-index: 2;
   }
+  .p-browser-insignias h5{
+    color: white;
+    text-align: center;
+  }
+  .p-browser-tecnologias {
+    height: 20px;
+    background-color:orange;
+    display: flex;
+    align-items: center;
+    position: sticky;
+    z-index: 2;
+  }
+  
   
   .p-img {
     width: 100%;
